--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -6,9 +6,9 @@
 
 	<dict>
         <key>NSLocationWhenInUseUsageDescription</key>
-        <string>We need your location for...</string>
+        <string>We need your location for getting your real location</string>
         <key>NSLocationAlwaysUsageDescription</key>
-        <string>We need your location for...</string>
+        <string>We need your location for getting you real location</string>
         <key>NSAppTransportSecurity</key>
         <dict>
             <key>NSAllowsArbitraryLoads</key>
@@ -25,7 +25,7 @@
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundleName</key>
-		<string>you_drink_we_drive</string>
+		<string>You Drink We Drive</string>
 		<key>CFBundlePackageType</key>
 		<string>APPL</string>
 		<key>CFBundleShortVersionString</key>
