--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   flutter_datetime_picker_plus: ^2.1.0
   flutter_native_splash: ^2.3.3
+  device_preview: ^1.1.0
 
 flutter_native_splash:
   color: "#ffffff"
