--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   flutter_datetime_picker_plus: ^2.1.0
   flutter_native_splash: ^2.3.3
   device_preview: ^1.1.0
-
+  url_launcher: ^6.1.14
 flutter_native_splash:
   color: "#ffffff"
   image: assets/images/splash.png
